--- a/Tiwut/index.html
+++ b/Tiwut/index.html
@@ -171,6 +171,11 @@
             font-size: 1.2rem;
             font-weight: 700;
         }
+        
+        .download-btn .text-only {
+            font-size: 1.2rem;
+            font-weight: 700;
+        }
 
         .download-btn .file-type {
             font-size: 0.8rem;
@@ -229,6 +234,9 @@
                 <h1>Tiwut</h1>
                 <p class="slogan" data-key="slogan">Die App, die alles verändert. Jetzt herunterladen und durchstarten.</p>
                 <div class="download-buttons">
+                    <a href="https://tiwut.de" class="download-btn">
+                        <span class="text-only" data-key="mainPage">Main Page</span>
+                    </a>
                     <a href="https://github.com/tiwut/Tiwut/releases/download/python/setup_Tiwut.exe" class="download-btn" download>
                         <span class="platform" data-key="downloadWindows">Download für Windows</span>
                         <span class="file-type">(.exe Installer)</span>
@@ -252,14 +260,16 @@
                 "de": {
                     "title": "Tiwut - Download",
                     "slogan": "Die App, die alles verändert. Jetzt herunterladen und durchstarten.",
+                    "mainPage": "Hauptseite",
                     "downloadWindows": "Download für Windows",
                     "downloadAndroid": "Download für Android",
                     "apkFile": "(.apk Datei)",
-                    "footer": "&copy; 2024 Tiwut. Alle Rechte vorbehalten."
+                    "footer": "&copy; 2025 Tiwut. Alle Rechte vorbehalten."
                 },
                 "en": {
                     "title": "Tiwut - Download",
                     "slogan": "The app that changes everything. Download now and get started.",
+                    "mainPage": "Main Page",
                     "downloadWindows": "Download for Windows",
                     "downloadAndroid": "Download for Android",
                     "apkFile": "(.apk file)",
@@ -268,10 +278,11 @@
                 "es": {
                     "title": "Tiwut - Descargar",
                     "slogan": "La aplicación que lo cambia todo. Descárgala ahora y empieza.",
+                    "mainPage": "Página Principal",
                     "downloadWindows": "Descargar para Windows",
                     "downloadAndroid": "Descargar para Android",
                     "apkFile": "(.apk archivo)",
-                    "footer": "&copy; 2024 Tiwut. Todos los derechos reservados."
+                    "footer": "&copy; 2025 Tiwut. Todos los derechos reservados."
                 }
             };
 
