--- a/Tiwut/index.html
+++ b/Tiwut/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
+    <script src="https://tiwut.de/Script/enforce_https.js" defer></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tiwut - Download</title>
